WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100387
Assertion failure trying to dispatch notification messages
https://bugs.webkit.org/show_bug.cgi?id=100387
Summary
Assertion failure trying to dispatch notification messages
Anders Carlsson
Reported
2012-10-25 09:24:25 PDT
Assertion failure trying to dispatch notification messages
Attachments
Patch
(3.07 KB, patch)
2012-10-25 09:28 PDT
,
Anders Carlsson
jberlin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-10-25 09:28:07 PDT
Created
attachment 170670
[details]
Patch
Anders Carlsson
Comment 2
2012-10-25 09:35:09 PDT
Committed
r132495
: <
http://trac.webkit.org/changeset/132495
>
Alexey Proskuryakov
Comment 3
2012-10-25 10:33:40 PDT
Anders, can you paste what the assertion failure was? It's kind of difficult to dupe bugs when fixes don't say what was fixed. For example, is this in any way related to
bug 100310
?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug